# NetworkingShenanigans

./: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
Examples/: CPackConfig.cmake  CPackSourceConfig.cmake  example  testSocket  testSocket.cpp
Server/: http_server.hpp  web_socket.cpp  web_socket.hpp
Socket/: socket.cpp  socket.hpp  socket_base.cpp  socket_base.hpp
